[gd_scene load_steps=4 format=3 uid="uid://cju0e1vcbg2um"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_fj0xq"]
[ext_resource type="PackedScene" uid="uid://dtxpv35tm8aje" path="res://scenes/ui/hud.tscn" id="2_dpdsw"]
[ext_resource type="Resource" uid="uid://cmf5lgisenfra" path="res://resources/level1.tres" id="2_wkvem"]

[node name="Game" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fj0xq")
first_level = ExtResource("2_wkvem")

[node name="WorldViewportContainer" type="SubViewportContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="WorldViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 720)
size_2d_override = Vector2i(320, 180)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="HUDViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
offset_right = 1280.0
offset_bottom = 720.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="HUDViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
size_2d_override = Vector2i(320, 180)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="HUD" parent="HUDViewportContainer/SubViewport" instance=ExtResource("2_dpdsw")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MenuViewportContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1280, 720)
size_2d_override = Vector2i(320, 180)
render_target_update_mode = 4
